# nightfield-knight

./: .gitmodules  CMakeLists.txt  LICENSE
Engine/: CMakeLists.txt
Engine/src/: asset_manager.cpp  asset_manager.hpp  engine.cpp  engine.hpp  engine_ui.hpp
Engine/src/core/: input.cpp  input.hpp  window.cpp  window.hpp
Engine/src/entity/: entity.hpp  world.cpp  world.hpp
Engine/src/gfx/: font.cpp  font.hpp  renderer.cpp  renderer.hpp  sprite.hpp  sprite_sheet.cpp  sprite_sheet.hpp  texture.cpp  texture.hpp
Engine/src/gfx/animation/: animation.cpp  animation.hpp  animator.cpp  animator.hpp
Engine/src/scene/: camera.cpp  camera.hpp  scene.hpp  scene_manager.cpp  scene_manager.hpp
Engine/src/tilemap/: map_layer.hpp  tile.hpp  tilemap.cpp  tilemap.hpp
Engine/src/ui/: box.cpp  box.hpp  widget.hpp
Engine/src/ui/layout/: column.cpp  column.hpp  grid.cpp  grid.hpp  row.cpp  row.hpp
Engine/src/utils/: utils.hpp
LevelEditor/: CMakeLists.txt
LevelEditor/src/: camera_controller.cpp  camera_controller.hpp  command_handler.cpp  command_handler.hpp  editor_scene.cpp  editor_scene.hpp  level_editor.cpp  level_editor.hpp  main.cpp
NightfieldKnight/: CMakeLists.txt
NightfieldKnight/src/: constants.hpp  game.cpp  game.hpp  main.cpp
NightfieldKnight/src/components/: camera_controller.cpp  camera_controller.hpp
NightfieldKnight/src/entities/characters/: character.cpp  character.hpp  player_entity.cpp  player_entity.hpp
NightfieldKnight/src/scenes/: default_scene.cpp  default_scene.hpp  overworld_scene.cpp  overworld_scene.hpp  scenes.hpp
res/data/: sprite_sheets.json
res/data/animations/: player_animations.json
res/data/maps/: map_0.json  map_1.json  tilesets.json
